src/App.css
@import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background-color: #f5f5f5;
  font-family: "PT Sans", sans-serif;
}
.title-logo {
  display: flex;
}

.logo {
  width: 60px;
  height: 60px;
  margin-bottom: 15px;
  margin-right: 15px;
}

.title {
  font-size: 20px;
  font-weight: bold;
  color: #333;
  margin-top: 0px;
}

.subtitle {
  font-size: 16px;
  color: #666;
  margin-top: 5px;
}

.description {
  font-size: 16px;
  font-weight: normal;
  color: #444;
  margin-left: -3px;
}

h4 .description {
  font-size: 16px;
  font-weight: normal;
  color: #444;
  margin-left: -3px;
}

.launch-button {
  background-color: #4caf50;
  color: white;
  font-size: 16px;
  padding: 12px 24px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  margin-left: -145px;
  transition: background 0.3s ease-in-out;
  font-family: "PT Sans", sans-serif;
  font-weight: bold;
}

.launch-button:hover {
  background-color: #388e3c;
}

